# bongo-copy-cat

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: main.yml
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
